added users page

--- a/next-crash-course/layout/Sidebar/Sidebar.module.css
+++ b/next-crash-course/layout/Sidebar/Sidebar.module.css
@@ -1,4 +1,16 @@
 
+.currentPage {
+    color: tomato;
+}
+
+.list {
+    list-style: none;
+}
+
+.list li {
+    padding: 0.2rem;
+}
+
 .main_container {
     display: flex;
     justify-content: flex-start;
